--- a/_includes/post.html
+++ b/_includes/post.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'he_wu'; // required: replace example with your forum shortname
-    var disqus_identifier = page.date + "_" + page.title + ".html";
+    var disqus_identifier = page.disqus_identifier;
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
