--- a/_includes/post.html
+++ b/_includes/post.html
@@ -27,7 +27,8 @@
   <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'he_wu'; // required: replace example with your forum shortname
-    var disqus_identifier = "{{ page.disqus_identifier }}";
+    var disqus_identifier = "{{ page.id }}";
+    var disqus_url = "{{site.url}}{{page.url}}";
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
