--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>HevaWu's Blog - {{ page.title }}</title>
-      <meta name="viewport" content="width=device-width">
 
-      <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/css/syntax.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>HevaWu's Blog - {{ page.title }}</title>
+  <meta name="viewport" content="width=device-width">
 
-      <!-- Custom CSS -->
-      <link rel="stylesheet" href="/css/main.css">
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css">
 
-      <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/css/main.css">
 
-      <!-- Google Fonts -->
-      <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="site">
-      <div class="sidebar" id="sidebar">
-        <div class="header">
-          <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
-          <span class="tagline">A responsive Jekyll theme</span>
-        </div>
-        <div class="posts">
-          <ul class="posts-list">
-            {% for post in site.posts %}
-              <li class="post-link">
-                <a class="post-title" href="{{ post.url }}">
-                  <span class="post-date">{{ post.date | date_to_string }}</span>
-                  {{ post.title }}
-                </a>
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-        <div class="footer">
-          <span id="footer-links">
-            <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
-          </span>
-        </div>
+  <!-- Responsive CSS -->
+  <link rel="stylesheet" href="/css/responsive.css">
+
+  <!-- Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <div class="site">
+    <div class="sidebar" id="sidebar">
+      <div class="header">
+        <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
+        <span class="tagline">HevaWu's Blog</span>
       </div>
-
-        {{ content }}
-
+      <div class="posts">
+        <ul class="posts-list">
+          {% for post in site.posts %}
+          <li class="post-link">
+            <a class="post-title" href="{{ post.url }}">
+              <span class="post-date">{{ post.date | date_to_string }}</span>
+              {{ post.title }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="tags">
+        <ul class="tags-list">
+          {% for tag in site.tags %}
+          {% if tag[1].size > {{site.featured-condition-size}} %}
+          <a href="/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+            {{ tag[0] }}
+          </a>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="footer">
+        <span id="footer-links">
+          <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
+          <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
+          <a href="https://github.com/HevaWu" class="footer-link">GitHub</a>
+        </span>
+      </div>
     </div>
-    <script src="/scripts/responsive.js" type="text/javascript"></script>
-  </body>
+
+    {{ content }}
+
+  </div>
+  <script src="/scripts/responsive.js" type="text/javascript"></script>
+</body>
+
 </html>
