--- a/_includes/post.html
+++ b/_includes/post.html
@@ -25,6 +25,7 @@
   <!-- Add Disqus comments. -->
   <div id="disqus_thread"></div>
   <script src="/scripts/disqus.js" type="text/javascript"></script>
+  <script id="dsq-count-scr" src="//hevawu-github-io.disqus.com/count.js" async></script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
