--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
       <div class="footer">
         <span id="footer-links">
           <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-          <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
+          <a href="https://www.linkedin.com/in/he-heva-wu-2a6819113/" class="footer-link">LinkedIn</a> <span class="separator">&bull;</span>
           <a href="https://github.com/HevaWu" class="footer-link">GitHub</a>
         </span>
       </div>
