--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
         <span class="tagline">HevaWu's Blog</span>
         <h5 class="motto">I may not be there yet, but I'm closer than I was yesterday. </h5>
-        <h5><(￣︶￣)↗[GO!]</h5>
+        <h5 class="motto_1">(￣︶￣)↗[GO!]</h5>
       </div>
       <div class="posts">
         <ul class="posts-list">
@@ -43,15 +43,13 @@
         </ul>
       </div>
       <div class="tags">
-        <ul class="tags-list">
-          {% for tag in site.tags %}
-          {% if tag[1].size > {{site.featured-condition-size}} %}
-          <a href="/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-            {{ tag[0] }}
-          </a>
-          {% endif %}
-          {% endfor %}
-        </ul>
+        <h3 class="page-heading">All pages tagged with
+          <b>
+            {% if page.autopages %}
+            {{page.autopages.display_name}}
+            {% endif %}
+          </b>
+        </h3>
       </div>
       <div class="footer">
         <span id="footer-links">
