--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,11 +43,14 @@
         </ul>
       </div>
       <div class="tags">
-        <ul class="tags-list">
-            {% for tag in tags %}
-            <a href="#{{ tag | slugify }}"> {{ tag }} </a>
-          {% endfor %}
-        </ul>
+          <h1 class="page-heading">
+            All pages tagged with
+            <b>
+              {% if page.autopages %}
+              {{page.autopages.display_name}}
+              {% endif %}
+            </b>
+          </h1>
       </div>
       <div class="footer">
         <span id="footer-links">
