--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,9 @@
         </ul>
       </div>
       <div class="tags">
-          <h1 class="page-heading">
-            All pages tagged with
-            <b>
-              {% if page.autopages %}
-              {{page.autopages.display_name}}
-              {% endif %}
-            </b>
-          </h1>
+          <h4 class="page-heading">
+            <!-- Tags: -->
+          </h4>
       </div>
       <div class="footer">
         <span id="footer-links">
