--- a/_includes/post.html
+++ b/_includes/post.html
@@ -13,12 +13,9 @@
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date: "%b %-d, %Y" }}
       </time>
-      {% if post.tags %}
-      |
-      {% for tag in post.tags %}
-      <a class="heva-tag-mark" href="/blog/tag/#{{ tag | slugify }}">
-        {{ tag }}
-      </a>
+      {% if page.tags %} |
+      {% for tag in page.tags %}
+      <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
       {% endfor %}
       {% endif %}
     </div>
