--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,9 +2,10 @@
   <div id="sidebar-button">
     <img src="/images/sidebar-button.png">
   </div>
+
   <div id="post-info">
     <div id="cover-photo-container">
-      {% if post.cover == "nil" %}
+      {% if post.cover %}
       <img style='height: 100%; width: 100%; object-fit: contain' id="cover-photo" src="/images/{{ page.cover }}">
       {% endif %}
     </div>
