--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Heva Wu's Blog - {{ page.title }}</title>
-  <meta name="viewport" content="width=device-width">
-
-  <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
-
-  <!-- Responsive CSS -->
-  <link rel="stylesheet" href="/css/responsive.css">
-
-  <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
-</head>
+{% include head.html %}
 
 <body>
   <div class="site">
@@ -41,11 +23,6 @@
           </li>
           {% endfor %}
         </ul>
-      </div>
-      <div class="tags">
-          <h4 class="page-heading">
-            <!-- Tags: -->
-          </h4>
       </div>
       <div class="footer">
         <span id="footer-links">
