--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <div class="site">
     <div class="sidebar" id="sidebar">
       <div class="header">
-        <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
+        <h1 class="title"><a href="/about"><img id="logo" src="/images/logo.png"></a></h1>
         <span class="tagline">Heva Wu's Blog</span>
         <span class="motto">I may not be there yet, but I'm closer than I was yesterday. </span>
         <span class="motto">(￣︶￣)↗[GO!]</span>
@@ -26,7 +26,7 @@
       </div>
       <div class="footer">
         <span id="footer-links">
-          <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
+          <a href="/about" class="footer-link">About</a> <span class="separator">&bull;</span>
           <a href="https://www.linkedin.com/in/he-heva-wu-2a6819113/" class="footer-link">LinkedIn</a> <span class="separator">&bull;</span>
           <a href="https://github.com/HevaWu" class="footer-link">GitHub</a>
         </span>
