Update css layout

--- a/_layouts/withoutPostListDefault.html
+++ b/_layouts/withoutPostListDefault.html
@@ -7,14 +7,18 @@
   <div class="site">
     <div class="sidebar" id="sidebar">
       <div class="header">
-        <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
+        <h1 class="title"><a href="/about" ><img id="logo" src="/images/logo.png"></a></h1>
         <span class="tagline">Heva Wu's Blog</span>
         <span class="motto">I may not be there yet, but I'm closer than I was yesterday. </span>
         <span class="motto">(￣︶￣)↗[GO!]</span>
       </div>
+      <div class="content">
+          <a href="/blog/tags" class="">Tags</a> <span class="separator">&bull;</span>
+          <a href="/blog/categories" class="">Categories</a> <span class="separator">&bull;</span>
+      </div>
       <div class="footer">
         <span id="footer-links">
-          <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
+          <a href="/about" class="footer-link">About</a> <span class="separator">&bull;</span>
           <a href="https://www.linkedin.com/in/he-heva-wu-2a6819113/" class="footer-link">LinkedIn</a> <span class="separator">&bull;</span>
           <a href="https://github.com/HevaWu" class="footer-link">GitHub</a>
         </span>
