--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,6 @@ a:hover {
   display: inline-block;
   text-align: center;
   line-height: 25px;
-  opacity: 1;
 }
 
 .tagline {
@@ -115,7 +114,6 @@ a:hover {
   margin-top: 0.5em;
   margin-bottom: 3em;
   display: block;
-  opacity: 1;
 }
 
 .motto {
@@ -126,7 +124,6 @@ a:hover {
   margin-bottom: 1.25em;
   text-align: center;
   display: block;
-  opacity: 1;
 }
 
 .sidebar-info {
@@ -140,7 +137,6 @@ a:hover {
   list-style-type: none;
   text-align: center;
   line-height: 3em;
-  opacity: 1;
 }
 
 .sidebar-info li a, .footer a {
@@ -156,7 +152,6 @@ a:hover {
   overflow: hidden;
   float: center;
   text-align: center;
-  opacity: 1;
 }
 
 /*****************************************************************************/
@@ -306,6 +301,7 @@ a:hover {
 }
 
 .sidebar {
+  position: absolute;
   float: left;
   width: 14%;
   padding-left: 11em;
@@ -315,7 +311,6 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: transparent;
-  opacity: 0.9;
 }
 
 .content {
