Add page navigation

--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,24 @@ a:hover {
 
 /*****************************************************************************/
 /*
+/* Post navigation
+/*
+/*****************************************************************************/
+
+.post-nav {
+  display: flex;
+}
+
+.post-nav div {
+  flex: 1 1 0;
+}
+
+.post-nav-next {
+  text-align: right;
+}
+
+/*****************************************************************************/
+/*
 /* Sidebar and Content
 /*
 /*****************************************************************************/
