--- a/_includes/post.html
+++ b/_includes/post.html
@@ -15,17 +15,17 @@
         {{ page.date | date: "%b %-d, %Y" }}
       </time>
       <div id="tag-category-container">
-          {% if page.tags %} 
-          {% for tag in page.tags %}
-          <a href="{{ site.tag_archive.path }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
-          {% endfor %}
-          {% endif %}
-          <p></p>
-          {% if page.categories %} 
-          {% for category in page.categories %}
-          <a href="{{ site.category_archive.path }}#{{ category | slugify }}" class="post-category">{{ category }}</a>
-          {% endfor %}
-          {% endif %}
+        {% if page.tags %}
+        {% for tag in page.tags %}
+        <a href="{{ site.tag_archive.path }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+        {% endfor %}
+        {% endif %}
+        <p></p>
+        {% if page.categories %}
+        {% for category in page.categories %}
+        <a href="{{ site.category_archive.path }}#{{ category | slugify }}" class="post-category">{{ category }}</a>
+        {% endfor %}
+        {% endif %}
       </div>
     </div>
   </div>
@@ -33,6 +33,8 @@
   <div class="post">
     {{ content }}
   </div>
+
+  <!-- Add footer -->
   <div class="colophon">
     <p>
       <span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
@@ -40,11 +42,27 @@
     </p>
   </div>
 
+  <!-- Add page navigation -->
+  <div class="post-nav">
+    <div>
+      {% if page.previous.url %}
+      <a href="{{ page.previous.url }}"> &laquo;&nbsp; {{ page.previous.title }}</a>
+      {% endif %}
+    </div>
+    <div class="post-nav-next">
+      {% if page.next.url %}
+      <a href="{{ page.next.url }}"> {{ page.next.title }} &nbsp;&raquo;</a>
+      {% endif %}
+    </div>
+  </div>
+
   <!-- Add Disqus comments. -->
-  <div id="disqus_thread"></div>
-  <script src="/scripts/disqus.js" type="text/javascript"></script>
-  <script id="dsq-count-scr" src="//hevawu-github-io.disqus.com/count.js" async></script>
-  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  <div id="disqus_thread">
+    <script src="/scripts/disqus.js" type="text/javascript"></script>
+    <script id="dsq-count-scr" src="//hevawu-github-io.disqus.com/count.js" async></script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
+        Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
 
 </div>
