--- a/_includes/tag-archive.html
+++ b/_includes/tag-archive.html
@@ -1,27 +1,30 @@
 <div class="content">
 	<div id="tags-title">
-	  <h1 id="title">{{ page.title }}</h1>
+		<h1 id="title">{{ page.title }}</h1>
 	</div>
-  
+
+	{% assign sortedTags = site.tags | sort: tag[0] %}
 	<div id="tags-expo-list">
-	  {% for tag in site.tags %}
-	  <a href="#{{ tag[0] | slugify }}" class="post-tag">{{ tag[0] }}</a>
-	  {% endfor %}
-	</div>
-	<hr/>
-	<div class="tags-expo-section">
-	  {% for tag in site.tags %}
-	  <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
-	  <ul class="tags-expo-posts">
-		{% for post in tag[1] %}
-		  <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
-		<li>
-		  {{ post.title }}
-		<small class="post-date">{{ post.date | date_to_string }}</small>
-		</li>
-		</a>
+		{% for tag in sortedTags %}
+		<a href="#{{ tag[0] | slugify }}" class="post-tag">{{ tag[0] }}</a>
 		{% endfor %}
-	  </ul>
-	  {% endfor %}
 	</div>
-  </div>
+
+	<hr />
+
+	<div class="tags-expo-section">
+		{% for tag in sortedTags %}
+		<h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
+		<ul class="tags-expo-posts">
+			{% for post in tag[1] %}
+			<a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
+				<li>
+					{{ post.title }}
+					<small class="post-date">{{ post.date | date_to_string }}</small>
+				</li>
+			</a>
+			{% endfor %}
+		</ul>
+		{% endfor %}
+	</div>
+</div>
