--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,45 @@ a:hover {
 
 /*****************************************************************************/
 /*
+/* Post Comments
+/*
+/*****************************************************************************/
+
+.github-comments ul {
+  list-style-type: none;
+  margin-left: 0em;
+}
+
+.github-comments ul li {
+  margin-top: 1.5em;
+}
+
+.comment-header a {
+  border-bottom: none;
+}
+
+.comment-content p {
+  margin-top: 0em;
+  margin-bottom: 0em;
+  margin-left: 50px;
+  padding-left: 10px;
+  background-color: rgba(233, 232, 232, 0.623);
+  border-radius: 4px;
+  border-left: 2px solid rgba(122, 121, 121, 0.623);
+}
+
+#gh-comments-list img {
+  border-radius: 15px;
+  vertical-align: middle;
+  max-width: 50px;
+}
+
+#gh-comments-list div {
+  padding-left: 1em;
+}
+
+/*****************************************************************************/
+/*
 /* Post navigation
 /*
 /*****************************************************************************/
