--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="/css/responsive.css">
 
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
 
     <!-- Add Mathmatic functions -->
     <script type="text/x-mathjax-config"> 
