Update post nav

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -30,6 +30,8 @@
     </div>
   </div>
 
+  {% include post-nav.html %}
+
   <div class="post">
     {{ content }}
   </div>
@@ -42,19 +44,7 @@
     </p>
   </div>
 
-  <!-- Add page navigation -->
-  <div class="post-nav">
-    <div>
-      {% if page.previous.url %}
-      <a href="{{ page.previous.url }}"> &laquo;&nbsp; {{ page.previous.title }}</a>
-      {% endif %}
-    </div>
-    <div class="post-nav-next">
-      {% if page.next.url %}
-      <a href="{{ page.next.url }}"> {{ page.next.title }} &nbsp;&raquo;</a>
-      {% endif %}
-    </div>
-  </div>
+  {% include post-nav.html %}
 
   <!-- Add Github issue comments. -->
   <div class="post-comment">
