Update comments sentence

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -113,7 +113,8 @@
 	<h2>Comments</h2>
 	<ul id="gh-comments-list"></ul>
 	<p id="leave-a-comment">
-		Join the discussion for this article on
-		<a href="https://github.com/HevaWu/HevaWu.github.io/issues/{{ page.comment_id }}">this ticket</a>. Comments will
-		appear on this page instantly.</p>
+		Join the discussion for this article
+		<a href="https://github.com/HevaWu/HevaWu.github.io/issues/{{ page.comment_id }}">at here</a>
+		. Our comments is using Github Issues. All of posted comments will display at this page instantly.
+	</p>
 </div>
