Make code block scrollable

--- a/css/main.css
+++ b/css/main.css
@@ -264,9 +264,13 @@ a:hover {
   font-size: 15px
 }
 
-.post pre code {
+.post pre {
+  overflow-x: auto;
+}
+
+.post pre code * {
   border: none;
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 /* terminal */
