--- a/_layouts/withoutPostListDefault.html
+++ b/_layouts/withoutPostListDefault.html
@@ -8,7 +8,7 @@
     <div class="sidebar" id="sidebar">
       <div class="header">
         <h1 class="title"><a href="/about" ><img id="logo" src="/images/logo.png"></a></h1>
-        <span class="tagline">Heva Wu's Blog</span>
+        <span class="tagline">He(Heva) Wu's Blog</span>
         <span class="motto">I may not be there yet, but I'm closer than I was yesterday. </span>
         <span class="motto">(￣︶￣)↗[GO!]</span>
       </div>
