--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Heva Wu's Blog - {{ page.title }}</title>
+    <title>He(Heva) Wu's Blog - {{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
 
     <!-- syntax highlighting CSS -->
@@ -18,8 +18,8 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
 
     <!-- Add Mathmatic functions -->
-    <script type="text/x-mathjax-config"> 
-        MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
     </script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({tex2jax: {
