--- a/_includes/post.html
+++ b/_includes/post.html
@@ -40,7 +40,7 @@
   <div class="colophon">
     <p>
       <span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
-      <span id="social">Find me on <a href="https://www.facebook.com/hevawu/">Facebook</a>!</span>
+      <span id="social">Find me on <a href="https://www.facebook.com/hevawu/">Facebook</a>, <a href="https://twitter.com/hewu9375">Twitter</a>!</span>
     </p>
   </div>
 
