--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,29 @@ html, body {
   scroll-behavior: smooth;
 }
 
+h1 {
+  margin-top: 1.25em;
+  margin-bottom: 0.5em;
+}
+
+h2 {
+  margin-top: 1.1em;
+  margin-bottom: 0.5em;
+}
+
+h3, h4, h5 {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+p {
+  padding-bottom: 0.5em;
+}
+
+li {
+  margin-bottom: 0.25em;
+}
+
 .h1, .h2, .h3, .h4, .h5, hr {
   margin-top: 1.25em;
   margin-left: -0.5em;
@@ -55,6 +78,10 @@ a:hover {
   color: #555;
 }
 
+.center-img-container {
+  text-align: center;
+}
+
 /*****************************************************************************/
 /*
 /* Home
@@ -80,10 +107,6 @@ a:hover {
 .posts-list li {
   text-align: center;
   line-height: 1.75em;
-}
-
-.about {
-  text-align: center;
 }
 
 .about img {
@@ -410,7 +433,6 @@ a:hover {
 }
 
 .content {
-  margin-right: 1em;
   padding-left: 2.125em;
 }
 
